# sfml-skeleton

./: CMakeLists.txt  README.md  build
cmake/: FindSFML.cmake
src/: main.cc
